fix issue extension image

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="members">
             <div class="card_member">
                 <div class="container_image">
-                    <img class="image_member" src="./recursos/img/luk1.JPG" alt="">
+                    <img class="image_member" src="./recursos/img/luk1.jpg" alt="">
                     <p>Luka Balmaceda</p>
                 </div>
                 <div class="container_text">
@@ -71,7 +71,7 @@
 
             <div class="card_member">
                 <div class="container_image">
-                    <img class="image_member" src="./recursos/img/mili1.JPG" alt="">
+                    <img class="image_member" src="./recursos/img/mili1.jpg" alt="">
                     <p>Milagros Vera</p>
                 </div>
                 <div class="container_text">
@@ -164,82 +164,82 @@
                 // Simular datos de un JSON (esto se reemplazaría con tus datos reales)
                 this.images = [
                     {
-                        src: './recursos/img_galery/1.PNG',
+                        src: './recursos/img_galery/1.png',
                         title: 'FECHA 1 | IFDC - 09/07/2024',
                         description: 'Debut de Quimericos, en su primera fecha en el Instituto de Formación Docente Continua.'
                     },
                     {
-                        src: './recursos/img_galery/2.JPG',
+                        src: './recursos/img_galery/2.jpg',
                         title: 'FECHA 2 | LA LLAVE - 03/08/2024',
                         description: 'Segunda fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela de Arte La Llave.'
                     },
                     {
-                        src: './recursos/img_galery/3.JPG',
+                        src: './recursos/img_galery/3.jpg',
                         title: 'FECHA 4 | ISP - 08/11/2024',
                         description: 'Cuarta fecha de la banda, en este caso nos presentamos para tocar en la "Expo de Carreras 2024" del Instituto Superior Patagónico en el módulo terciario'
                     },
                     {
-                        src: './recursos/img_galery/4.JPG',
+                        src: './recursos/img_galery/4.jpg',
                         title: 'FECHA 5 | ESC. 328 - 16/11/2024',
                         description: 'Quinta fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela N°328, en el festival "Arte, Cultura y Color".'
                     },
                     {
-                        src: './recursos/img_galery/5.JPG',
+                        src: './recursos/img_galery/5.jpg',
                         title: 'FECHA 2 | LA LLAVE - 03/08/2024',
                         description: 'Segunda fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela de Arte La Llave.'
                     },
                     {
-                        src: './recursos/img_galery/6.JPG',
+                        src: './recursos/img_galery/6.jpg',
                         title: 'FECHA 2 | LA LLAVE - 03/08/2024',
                         description: 'Segunda fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela de Arte La Llave.'
                     },
                     {
-                        src: './recursos/img_galery/7.JPG',
+                        src: './recursos/img_galery/7.jpg',
                         title: 'FECHA 2 | LA LLAVE - 03/08/2024',
                         description: 'Segunda fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela de Arte La Llave.'
                     },
                     {
-                        src: './recursos/img_galery/8.JPG',
+                        src: './recursos/img_galery/8.jpg',
                         title: 'FECHA 2 | LA LLAVE - 03/08/2024',
                         description: 'Segunda fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela de Arte La Llave.'
                     },
                     {
-                        src: './recursos/img_galery/9.JPG',
+                        src: './recursos/img_galery/9.jpg',
                         title: 'FECHA 4 | ISP - 08/11/2024',
                         description: 'Cuarta fecha de la banda, en este caso nos presentamos para tocar en la "Expo de Carreras 2024" del Instituto Superior Patagónico en el módulo terciario'
                     },
                     {
-                        src: './recursos/img_galery/10.JPG',
+                        src: './recursos/img_galery/10.jpg',
                         title: 'FECHA 4 | ISP - 08/11/2024',
                         description: 'Cuarta fecha de la banda, en este caso nos presentamos para tocar en la "Expo de Carreras 2024" del Instituto Superior Patagónico en el módulo terciario'
                     },
                     {
-                        src: './recursos/img_galery/11.JPG',
+                        src: './recursos/img_galery/11.jpg',
                         title: 'FECHA 4 | ISP - 08/11/2024',
                         description: 'Cuarta fecha de la banda, en este caso nos presentamos para tocar en la "Expo de Carreras 2024" del Instituto Superior Patagónico en el módulo terciario'
                     },
                     {
-                        src: './recursos/img_galery/12.JPG',
+                        src: './recursos/img_galery/12.jpg',
                         title: 'FECHA 4 | ISP - 08/11/2024',
                         description: 'Cuarta fecha de la banda, en este caso nos presentamos para tocar en la "Expo de Carreras 2024" del Instituto Superior Patagónico en el módulo terciario'
                     },
                     {
-                        src: './recursos/img_galery/13.JPG',
+                        src: './recursos/img_galery/13.jpg',
                         title: 'FECHA 5 | ESC. 328 - 16/11/2024',
                         description: 'Quinta fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela N°328, en el festival "Arte, Cultura y Color".'
                     },
                     {
-                        src: './recursos/img_galery/14.JPG',
+                        src: './recursos/img_galery/14.jpg',
                         title: 'FECHA 5 | ESC. 328 - 16/11/2024',
                         description: 'Quinta fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela N°328, en el festival "Arte, Cultura y Color".'
                     },
                     {
-                        src: './recursos/img_galery/15.JPG',
+                        src: './recursos/img_galery/15.jpg',
                         title: 'FECHA 5 | ESC. 328 - 16/11/2024',
                         description: 'Quinta fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela N°328, en el festival "Arte, Cultura y Color".'
                     },
                     {
-                        src: './recursos/img_galery/16.JPG',
+                        src: './recursos/img_galery/16.jpg',
                         title: 'FECHA 5 | ESC. 328 - 16/11/2024',
                         description: 'Quinta fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela N°328, en el festival "Arte, Cultura y Color".'
                     },
