fix issue extension image and delete video spotify

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <div class="card_member">
                 <div class="container_image">
-                    <img class="image_member" src="./recursos/img/mili1.jpg" alt="">
+                    <img class="image_member" src="./recursos/img/mili1.JPG" alt="">
                     <p>Milagros Vera</p>
                 </div>
                 <div class="container_text">
