--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./recursos/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <title>Quimericos | Sitio Oficial</title>
 
@@ -16,12 +16,12 @@
 
     <header>
         <nav>
-            <a href="#home"><img src="./recursos/img/logo.png" alt="Logo Quimericos" class="logo-mobile"></a>
+            <a href="#home"><img src="/img/logo.png" alt="Logo Quimericos" class="logo-mobile"></a>
             <button class="menu-toggle" id="menuToggle">☰</button>
             <ul>
                 <li><a href="#members">Integrantes</a></li>
                 <li><a href="#about_me">Sobre nosotros</a></li>
-                <li class="logo"><a href="#home"><img src="./recursos/img/logo.png" alt="Logo Quimericos"></a></li>
+                <li class="logo"><a href="#home"><img src="/img/logo.png" alt="Logo Quimericos"></a></li>
                 <li><a href="#galery">Fotos</a></li>
                 <li><a href="#contact">Contacto</a></li>
             </ul>
@@ -30,7 +30,7 @@
 
     <section class="container_gif_animation" id="home">
         <div class="gif_animation">
-            <video src="./recursos/videos/logo_animacion.mp4" autoplay loop muted></video>
+            <video src="/videos/logo_animacion.mp4" autoplay loop muted></video>
         </div>
     </section>
 
@@ -39,7 +39,7 @@
         <div class="members">
             <div class="card_member">
                 <div class="container_image">
-                    <img class="image_member" src="./recursos/img/luk1.jpg" alt="">
+                    <img class="image_member" src="/img/luk1.jpg" alt="">
                     <p>Luka Balmaceda</p>
                 </div>
                 <div class="container_text">
@@ -47,7 +47,7 @@
                         de cuatro años. Tiene 20 años, estudia Diseño Gráfico y trabaja como diseñador.</p>
                     <div class="container_network_social">
                         <a href="https://www.instagram.com/lukabalmaceda/" target="_blank">
-                            <img src="./recursos/img/instagram.png" alt="">
+                            <img src="/img/instagram.png" alt="">
                         </a>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
 
             <div class="card_member">
                 <div class="container_image">
-                    <img class="image_member" src="./recursos/img/gabi1.jpg" alt="">
+                    <img class="image_member" src="/img/gabi1.jpg" alt="">
                     <p>Gabriel Osuna</p>
                 </div>
                 <div class="container_text">
@@ -63,7 +63,7 @@
                         tiene memoria. Tiene 21 años, estudia y trabaja en el taller de su papá.</p>
                     <div class="container_network_social">
                         <a href="https://www.instagram.com/gabi_osuna47/" target="_blank">
-                            <img src="./recursos/img/instagram.png" alt="">
+                            <img src="/img/instagram.png" alt="">
                         </a>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
 
             <div class="card_member">
                 <div class="container_image">
-                    <img class="image_member" src="./recursos/img/mili1.JPG" alt="">
+                    <img class="image_member" src="/img/mili1.JPG" alt="">
                     <p>Milagros Vera</p>
                 </div>
                 <div class="container_text">
@@ -79,7 +79,7 @@
                         escenario. Tiene 21 años, estudia y tiene un emprendimiento.</p>
                     <div class="container_network_social">
                         <a href="https://www.instagram.com/mixel.s1/" target="_blank">
-                            <img src="./recursos/img/instagram.png" alt="">
+                            <img src="/img/instagram.png" alt="">
                         </a>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
 
             <div class="card_member">
                 <div class="container_image">
-                    <img class="image_member" src="./recursos/img/alvaro1.jpg" alt="">
+                    <img class="image_member" src="/img/alvaro1.jpg" alt="">
                     <p>Álvaro Espinoza</p>
                 </div>
                 <div class="container_text">
@@ -100,7 +100,7 @@
 
     <section class="container_aboutme" id="about_me">
         <div class="aboutme">
-            <img class="image_logo" src="./recursos/img/logo.png" alt="Logo Quimericos">
+            <img class="image_logo" src="/img/logo.png" alt="Logo Quimericos">
             <div class="container_text">
                 <h2>Sobre nosotros</h2>
                 <p>Somos Quimericos, una banda de rock nacida durante los primeros meses del año 2024. Somos una banda
@@ -144,12 +144,12 @@
     <footer>
         <div class="container_footer">
             <div class="logo">
-                <img class="image_logo" src="./recursos/img/logo.png" alt="Logo Quimericos">
+                <img class="image_logo" src="/img/logo.png" alt="Logo Quimericos">
                 <h2>Quimericos</h2>
             </div>
             <p>&copy; <span id="year_copyright"></span> Quimericos. Todos los derechos reservados.</p>
             <a href="https://www.instagram.com/quimeric0s/" class="network_social_instagram" target="_blank">
-                <img src="./recursos/img/instagram.png" alt="">
+                <img src="/img/instagram.png" alt="">
                 quimeric0s</a>
         </div>
     </footer>
@@ -164,82 +164,82 @@
                 // Simular datos de un JSON (esto se reemplazaría con tus datos reales)
                 this.images = [
                     {
-                        src: './recursos/img_galery/1.png',
+                        src: '/img_galery/1.png',
                         title: 'FECHA 1 | IFDC - 09/07/2024',
                         description: 'Debut de Quimericos, en su primera fecha en el Instituto de Formación Docente Continua.'
                     },
                     {
-                        src: './recursos/img_galery/2.jpg',
+                        src: '/img_galery/2.jpg',
                         title: 'FECHA 2 | LA LLAVE - 03/08/2024',
                         description: 'Segunda fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela de Arte La Llave.'
                     },
                     {
-                        src: './recursos/img_galery/3.jpg',
+                        src: '/img_galery/3.jpg',
                         title: 'FECHA 4 | ISP - 08/11/2024',
                         description: 'Cuarta fecha de la banda, en este caso nos presentamos para tocar en la "Expo de Carreras 2024" del Instituto Superior Patagónico en el módulo terciario'
                     },
                     {
-                        src: './recursos/img_galery/4.jpg',
+                        src: '/img_galery/4.jpg',
                         title: 'FECHA 5 | ESC. 328 - 16/11/2024',
                         description: 'Quinta fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela N°328, en el festival "Arte, Cultura y Color".'
                     },
                     {
-                        src: './recursos/img_galery/5.jpg',
+                        src: '/img_galery/5.jpg',
                         title: 'FECHA 2 | LA LLAVE - 03/08/2024',
                         description: 'Segunda fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela de Arte La Llave.'
                     },
                     {
-                        src: './recursos/img_galery/6.jpg',
+                        src: '/img_galery/6.jpg',
                         title: 'FECHA 2 | LA LLAVE - 03/08/2024',
                         description: 'Segunda fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela de Arte La Llave.'
                     },
                     {
-                        src: './recursos/img_galery/7.jpg',
+                        src: '/img_galery/7.jpg',
                         title: 'FECHA 2 | LA LLAVE - 03/08/2024',
                         description: 'Segunda fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela de Arte La Llave.'
                     },
                     {
-                        src: './recursos/img_galery/8.jpg',
+                        src: '/img_galery/8.jpg',
                         title: 'FECHA 2 | LA LLAVE - 03/08/2024',
                         description: 'Segunda fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela de Arte La Llave.'
                     },
                     {
-                        src: './recursos/img_galery/9.jpg',
+                        src: '/img_galery/9.jpg',
                         title: 'FECHA 4 | ISP - 08/11/2024',
                         description: 'Cuarta fecha de la banda, en este caso nos presentamos para tocar en la "Expo de Carreras 2024" del Instituto Superior Patagónico en el módulo terciario'
                     },
                     {
-                        src: './recursos/img_galery/10.jpg',
+                        src: '/img_galery/10.jpg',
                         title: 'FECHA 4 | ISP - 08/11/2024',
                         description: 'Cuarta fecha de la banda, en este caso nos presentamos para tocar en la "Expo de Carreras 2024" del Instituto Superior Patagónico en el módulo terciario'
                     },
                     {
-                        src: './recursos/img_galery/11.jpg',
+                        src: '/img_galery/11.jpg',
                         title: 'FECHA 4 | ISP - 08/11/2024',
                         description: 'Cuarta fecha de la banda, en este caso nos presentamos para tocar en la "Expo de Carreras 2024" del Instituto Superior Patagónico en el módulo terciario'
                     },
                     {
-                        src: './recursos/img_galery/12.jpg',
+                        src: '/img_galery/12.jpg',
                         title: 'FECHA 4 | ISP - 08/11/2024',
                         description: 'Cuarta fecha de la banda, en este caso nos presentamos para tocar en la "Expo de Carreras 2024" del Instituto Superior Patagónico en el módulo terciario'
                     },
                     {
-                        src: './recursos/img_galery/13.jpg',
+                        src: '/img_galery/13.jpg',
                         title: 'FECHA 5 | ESC. 328 - 16/11/2024',
                         description: 'Quinta fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela N°328, en el festival "Arte, Cultura y Color".'
                     },
                     {
-                        src: './recursos/img_galery/14.jpg',
+                        src: '/img_galery/14.jpg',
                         title: 'FECHA 5 | ESC. 328 - 16/11/2024',
                         description: 'Quinta fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela N°328, en el festival "Arte, Cultura y Color".'
                     },
                     {
-                        src: './recursos/img_galery/15.jpg',
+                        src: '/img_galery/15.jpg',
                         title: 'FECHA 5 | ESC. 328 - 16/11/2024',
                         description: 'Quinta fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela N°328, en el festival "Arte, Cultura y Color".'
                     },
                     {
-                        src: './recursos/img_galery/16.jpg',
+                        src: '/img_galery/16.jpg',
                         title: 'FECHA 5 | ESC. 328 - 16/11/2024',
                         description: 'Quinta fecha de la banda, en esta oportunidad tuvimos la experiencia de presentarnos en La Escuela N°328, en el festival "Arte, Cultura y Color".'
                     },
